<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingBottom="@dimen/buttonBarHeight"
	    android:orientation="horizontal" >
		<EditText
		    android:id="@+id/txtBxName"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/lblProductName" />
		<EditText
		    android:id="@+id/txtBxPrice"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/lblProductPrice" />
		<ListView
		    android:id="@+id/lvItems"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="@dimen/buttonBarHeight"
		android:orientation="horizontal">
	    <Button
	        android:id="@+id/btnCancel"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="0.5"
	        android:text="@string/btnCancel" />
	    <Button
	        android:id="@+id/btnOK"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="0.5"
	        android:text="@string/btnAddItem" />
	</LinearLayout>
</RelativeLayout>